libraries/Parsers/Microsoft.Bot.Builder.Parsers.LU/Generated/LUFileParser.cs
//------------------------------------------------------------------------------
// <auto-generated>
//     This code was generated by a tool.
//     ANTLR Version: 4.8
//
//     Changes to this file may cause incorrect behavior and will be lost if
//     the code is regenerated.
// </auto-generated>
//------------------------------------------------------------------------------

// Generated from .\LUFileParser.g4 by ANTLR 4.8

// Unreachable code detected
#pragma warning disable 0162
// The variable '...' is assigned but its value is never used
#pragma warning disable 0219
// Missing XML comment for publicly visible type or member '...'
#pragma warning disable 1591
// Ambiguous reference in cref attribute
#pragma warning disable 419
// Type or member does not need a CLSCompliant attribute because the assembly does not have a CLSCompliant attribute
#pragma warning disable CS3021

using System;
using System.IO;
using System.Text;
using System.Diagnostics;
using System.Collections.Generic;
using Antlr4.Runtime;
using Antlr4.Runtime.Atn;
using Antlr4.Runtime.Misc;
using Antlr4.Runtime.Tree;
using DFA = Antlr4.Runtime.Dfa.DFA;

[System.CodeDom.Compiler.GeneratedCode("ANTLR", "4.8")]
[System.CLSCompliant(false)]
public partial class LUFileParser : Parser
{
    protected static DFA[] decisionToDFA;
    protected static PredictionContextCache sharedContextCache = new PredictionContextCache();
    public const int
        WS = 1, NEWLINE = 2, QNA_SOURCE_INFO = 3, MODEL_INFO = 4, COMMENT = 5, QNA = 6, HASH = 7,
        DASH = 8, DOLLAR = 9, AT = 10, IMPORT = 11, FILTER_MARK = 12, QNA_ID_MARK = 13, MULTI_LINE_TEXT = 14,
        PROMPT_MARK = 15, INVALID_TOKEN_DEFAULT_MODE = 16, EQUAL = 17, COMMA = 18, HAS_ROLES_LABEL = 19,
        HAS_FEATURES_LABEL = 20, NEW_ENTITY_TYPE_IDENTIFIER = 21, PHRASE_LIST_LABEL = 22,
        NEW_COMPOSITE_ENTITY = 23, NEW_REGEX_ENTITY = 24, NEW_ENTITY_IDENTIFIER = 25,
        NEW_ENTITY_IDENTIFIER_WITH_WS = 26, NEWLINE_IN_NAME = 27, IDENTIFIER = 28, DOT = 29,
        ESCAPE_CHARACTER = 30, EXPRESSION = 31, TEXT = 32, NEWLINE_IN_ENTITY = 33, COMPOSITE_ENTITY = 34,
        REGEX_ENTITY = 35, ENTITY_TEXT = 36, COLON_MARK = 37, NEWLINE_IN_QNA = 38, QNA_TEXT = 39;
    public const int
        RULE_file = 0, RULE_paragraph = 1, RULE_newline = 2, RULE_errorString = 3,
        RULE_nestedIntentSection = 4, RULE_nestedIntentNameLine = 5, RULE_nestedIntentName = 6,
        RULE_nameIdentifier = 7, RULE_nestedIntentBodyDefinition = 8, RULE_subIntentDefinition = 9,
        RULE_simpleIntentSection = 10, RULE_intentDefinition = 11, RULE_intentNameLine = 12,
        RULE_intentName = 13, RULE_intentBody = 14, RULE_normalIntentBody = 15,
        RULE_normalIntentString = 16, RULE_newEntitySection = 17, RULE_newEntityDefinition = 18,
        RULE_newEntityListbody = 19, RULE_newEntityLine = 20, RULE_newCompositeDefinition = 21,
        RULE_newRegexDefinition = 22, RULE_newEntityType = 23, RULE_newEntityRoles = 24,
        RULE_newEntityUsesFeatures = 25, RULE_newEntityRoleOrFeatures = 26, RULE_newEntityName = 27,
        RULE_newEntityNameWithWS = 28, RULE_entitySection = 29, RULE_entityDefinition = 30,
        RULE_entityLine = 31, RULE_entityName = 32, RULE_entityType = 33, RULE_compositeEntityIdentifier = 34,
        RULE_regexEntityIdentifier = 35, RULE_entityListBody = 36, RULE_normalItemString = 37,
        RULE_importSection = 38, RULE_importDefinition = 39, RULE_qnaSection = 40,
        RULE_qnaDefinition = 41, RULE_qnaSourceInfo = 42, RULE_qnaIdMark = 43,
        RULE_qnaQuestion = 44, RULE_questionText = 45, RULE_moreQuestionsBody = 46,
        RULE_moreQuestion = 47, RULE_errorQuestionString = 48, RULE_qnaAnswerBody = 49,
        RULE_filterSection = 50, RULE_promptSection = 51, RULE_filterLine = 52,
        RULE_errorFilterLine = 53, RULE_multiLineAnswer = 54, RULE_modelInfoSection = 55,
        RULE_modelInfoDefinition = 56;
    public static readonly string[] ruleNames = {
        "file", "paragraph", "newline", "errorString", "nestedIntentSection",
        "nestedIntentNameLine", "nestedIntentName", "nameIdentifier", "nestedIntentBodyDefinition",
        "subIntentDefinition", "simpleIntentSection", "intentDefinition", "intentNameLine",
        "intentName", "intentBody", "normalIntentBody", "normalIntentString",
        "newEntitySection", "newEntityDefinition", "newEntityListbody", "newEntityLine",
        "newCompositeDefinition", "newRegexDefinition", "newEntityType", "newEntityRoles",
        "newEntityUsesFeatures", "newEntityRoleOrFeatures", "newEntityName", "newEntityNameWithWS",
        "entitySection", "entityDefinition", "entityLine", "entityName", "entityType",
        "compositeEntityIdentifier", "regexEntityIdentifier", "entityListBody",
        "normalItemString", "importSection", "importDefinition", "qnaSection",
        "qnaDefinition", "qnaSourceInfo", "qnaIdMark", "qnaQuestion", "questionText",
        "moreQuestionsBody", "moreQuestion", "errorQuestionString", "qnaAnswerBody",
        "filterSection", "promptSection", "filterLine", "errorFilterLine", "multiLineAnswer",
        "modelInfoSection", "modelInfoDefinition"
    };

    private static readonly string[] _LiteralNames = {
        null, null, null, null, null, null, null, null, null, "'$'", "'@'", null,
        null, null, null, null, null, "'='", "','", null, null, null, null, null,
        null, null, null, null, null, "'.'", null, null, null, null, null, null,
        null, "':'"
    };
    private static readonly string[] _SymbolicNames = {
        null, "WS", "NEWLINE", "QNA_SOURCE_INFO", "MODEL_INFO", "COMMENT", "QNA",
        "HASH", "DASH", "DOLLAR", "AT", "IMPORT", "FILTER_MARK", "QNA_ID_MARK",
        "MULTI_LINE_TEXT", "PROMPT_MARK", "INVALID_TOKEN_DEFAULT_MODE", "EQUAL",
        "COMMA", "HAS_ROLES_LABEL", "HAS_FEATURES_LABEL", "NEW_ENTITY_TYPE_IDENTIFIER",
        "PHRASE_LIST_LABEL", "NEW_COMPOSITE_ENTITY", "NEW_REGEX_ENTITY", "NEW_ENTITY_IDENTIFIER",
        "NEW_ENTITY_IDENTIFIER_WITH_WS", "NEWLINE_IN_NAME", "IDENTIFIER", "DOT",
        "ESCAPE_CHARACTER", "EXPRESSION", "TEXT", "NEWLINE_IN_ENTITY", "COMPOSITE_ENTITY",
        "REGEX_ENTITY", "ENTITY_TEXT", "COLON_MARK", "NEWLINE_IN_QNA", "QNA_TEXT"
    };
    public static readonly IVocabulary DefaultVocabulary = new Vocabulary(_LiteralNames, _SymbolicNames);

    [NotNull]
    public override IVocabulary Vocabulary
    {
        get
        {
            return DefaultVocabulary;
        }
    }

    public override string GrammarFileName { get { return "LUFileParser.g4"; } }

    public override string[] RuleNames { get { return ruleNames; } }

    public override string SerializedAtn { get { return new string(_serializedATN); } }

    static LUFileParser()
    {
        decisionToDFA = new DFA[_ATN.NumberOfDecisions];
        for (int i = 0; i < _ATN.NumberOfDecisions; i++)
        {
            decisionToDFA[i] = new DFA(_ATN.GetDecisionState(i), i);
        }
    }

    public LUFileParser(ITokenStream input) : this(input, Console.Out, Console.Error) { }

    public LUFileParser(ITokenStream input, TextWriter output, TextWriter errorOutput)
    : base(input, output, errorOutput)
    {
        Interpreter = new ParserATNSimulator(this, _ATN, decisionToDFA, sharedContextCache);
    }

    public partial class FileContext : ParserRuleContext
    {
        public ITerminalNode Eof() { return GetToken(LUFileParser.Eof, 0); }
        public ParagraphContext[] paragraph()
        {
            return GetRuleContexts<ParagraphContext>();
        }
        public ParagraphContext paragraph(int i)
        {
            return GetRuleContext<ParagraphContext>(i);
        }
        public FileContext(ParserRuleContext parent, int invokingState)
            : base(parent, invokingState)
        {
        }
        public override int RuleIndex { get { return RULE_file; } }
        public override void EnterRule(IParseTreeListener listener)
        {
            ILUFileParserListener typedListener = listener as ILUFileParserListener;
            if (typedListener != null) typedListener.EnterFile(this);
        }
        public override void ExitRule(IParseTreeListener listener)
        {
            ILUFileParserListener typedListener = listener as ILUFileParserListener;
            if (typedListener != null) typedListener.ExitFile(this);
        }
        public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor)
        {
            ILUFileParserVisitor<TResult> typedVisitor = visitor as ILUFileParserVisitor<TResult>;
            if (typedVisitor != null) return typedVisitor.VisitFile(this);
            else return visitor.VisitChildren(this);
        }
    }

    [RuleVersion(0)]
    public FileContext file()
    {
        FileContext _localctx = new FileContext(Context, State);
        EnterRule(_localctx, 0, RULE_file);
        try
        {
            int _alt;
            EnterOuterAlt(_localctx, 1);
            {
                State = 115;
                ErrorHandler.Sync(this);
                _alt = 1 + 1;
                do
                {
                    switch (_alt)
                    {
                        case 1 + 1:
                            {
                                {
                                    State = 114; paragraph();
                                }
                            }
                            break;
                        default:
                            throw new NoViableAltException(this);
                    }
                    State = 117;
                    ErrorHandler.Sync(this);
                    _alt = Interpreter.AdaptivePredict(TokenStream, 0, Context);
                } while (_alt != 1 && _alt != global::Antlr4.Runtime.Atn.ATN.INVALID_ALT_NUMBER);
                State = 119; Match(Eof);
            }
        }
        catch (RecognitionException re)
        {
            _localctx.exception = re;
            ErrorHandler.ReportError(this, re);
            ErrorHandler.Recover(this, re);
        }
        finally
        {
            ExitRule();
        }
        return _localctx;
    }

    public partial class ParagraphContext : ParserRuleContext
    {
        public NewlineContext newline()
        {
            return GetRuleContext<NewlineContext>(0);
        }
        public NestedIntentSectionContext nestedIntentSection()
        {
            return GetRuleContext<NestedIntentSectionContext>(0);
        }
        public SimpleIntentSectionContext simpleIntentSection()
        {
            return GetRuleContext<SimpleIntentSectionContext>(0);
        }
        public EntitySectionContext entitySection()
        {
            return GetRuleContext<EntitySectionContext>(0);
        }
        public NewEntitySectionContext newEntitySection()
        {
            return GetRuleContext<NewEntitySectionContext>(0);
        }
        public ImportSectionContext importSection()
        {
            return GetRuleContext<ImportSectionContext>(0);
        }
        public QnaSectionContext qnaSection()
        {
            return GetRuleContext<QnaSectionContext>(0);
        }
        public ModelInfoSectionContext modelInfoSection()
        {
            return GetRuleContext<ModelInfoSectionContext>(0);
        }
        public ParagraphContext(ParserRuleContext parent, int invokingState)
            : base(parent, invokingState)
        {
        }
        public override int RuleIndex { get { return RULE_paragraph; } }
        public override void EnterRule(IParseTreeListener listener)
        {
            ILUFileParserListener typedListener = listener as ILUFileParserListener;
            if (typedListener != null) typedListener.EnterParagraph(this);
        }
        public override void ExitRule(IParseTreeListener listener)
        {
            ILUFileParserListener typedListener = listener as ILUFileParserListener;
            if (typedListener != null) typedListener.ExitParagraph(this);
        }
        public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor)
        {
            ILUFileParserVisitor<TResult> typedVisitor = visitor as ILUFileParserVisitor<TResult>;
            if (typedVisitor != null) return typedVisitor.VisitParagraph(this);
            else return visitor.VisitChildren(this);
        }
    }

    [RuleVersion(0)]
    public ParagraphContext paragraph()
    {
        ParagraphContext _localctx = new ParagraphContext(Context, State);
        EnterRule(_localctx, 2, RULE_paragraph);
        try
        {
            State = 129;
            ErrorHandler.Sync(this);
            switch (Interpreter.AdaptivePredict(TokenStream, 1, Context))
            {
                case 1:
                    EnterOuterAlt(_localctx, 1);
                    {
                        State = 121; newline();
                    }
                    break;
                case 2:
                    EnterOuterAlt(_localctx, 2);
                    {
                        State = 122; nestedIntentSection();
                    }
                    break;
                case 3:
                    EnterOuterAlt(_localctx, 3);
                    {
                        State = 123; simpleIntentSection();
                    }
                    break;
                case 4:
                    EnterOuterAlt(_localctx, 4);
                    {
                        State = 124; entitySection();
                    }
                    break;
                case 5:
                    EnterOuterAlt(_localctx, 5);
                    {
                        State = 125; newEntitySection();
                    }
                    break;
                case 6:
                    EnterOuterAlt(_localctx, 6);
                    {
                        State = 126; importSection();
                    }
                    break;
                case 7:
                    EnterOuterAlt(_localctx, 7);
                    {
                        State = 127; qnaSection();
                    }
                    break;
                case 8:
                    EnterOuterAlt(_localctx, 8);
                    {
                        State = 128; modelInfoSection();
                    }
                    break;
            }
        }
        catch (RecognitionException re)
        {
            _localctx.exception = re;
            ErrorHandler.ReportError(this, re);
            ErrorHandler.Recover(this, re);
        }
        finally
        {
            ExitRule();
        }
        return _localctx;
    }

    public partial class NewlineContext : ParserRuleContext
    {
        public ITerminalNode NEWLINE() { return GetToken(LUFileParser.NEWLINE, 0); }
        public ITerminalNode Eof() { return GetToken(LUFileParser.Eof, 0); }
        public ITerminalNode[] WS() { return GetTokens(LUFileParser.WS); }
        public ITerminalNode WS(int i)
        {
            return GetToken(LUFileParser.WS, i);
        }
        public NewlineContext(ParserRuleContext parent, int invokingState)
            : base(parent, invokingState)
        {
        }
        public override int RuleIndex { get { return RULE_newline; } }
        public override void EnterRule(IParseTreeListener listener)
        {
            ILUFileParserListener typedListener = listener as ILUFileParserListener;
            if (typedListener != null) typedListener.EnterNewline(this);
        }
        public override void ExitRule(IParseTreeListener listener)
        {
            ILUFileParserListener typedListener = listener as ILUFileParserListener;
            if (typedListener != null) typedListener.ExitNewline(this);
        }
        public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor)
        {
            ILUFileParserVisitor<TResult> typedVisitor = visitor as ILUFileParserVisitor<TResult>;
            if (typedVisitor != null) return typedVisitor.VisitNewline(this);
            else return visitor.VisitChildren(this);
        }
    }

    [RuleVersion(0)]
    public NewlineContext newline()
    {
        NewlineContext _localctx = new NewlineContext(Context, State);
        EnterRule(_localctx, 4, RULE_newline);
        int _la;
        try
        {
            EnterOuterAlt(_localctx, 1);
            {
                State = 134;
                ErrorHandler.Sync(this);
                _la = TokenStream.LA(1);
                while (_la == WS)
                {
                    {
                        {
                            State = 131; Match(WS);
                        }
                    }
                    State = 136;
                    ErrorHandler.Sync(this);
                    _la = TokenStream.LA(1);
                }
                State = 137;
                _la = TokenStream.LA(1);
                if (!(_la == Eof || _la == NEWLINE))
                {
                    ErrorHandler.RecoverInline(this);
                }
                else
                {
                    ErrorHandler.ReportMatch(this);
                    Consume();
                }
            }
        }
        catch (RecognitionException re)
        {
            _localctx.exception = re;
            ErrorHandler.ReportError(this, re);
            ErrorHandler.Recover(this, re);
        }
        finally
        {
            ExitRule();
        }
        return _localctx;
    }

    public partial class ErrorStringContext : ParserRuleContext
    {
        public ITerminalNode[] WS() { return GetTokens(LUFileParser.WS); }
        public ITerminalNode WS(int i)
        {
            return GetToken(LUFileParser.WS, i);
        }
        public ITerminalNode[] INVALID_TOKEN_DEFAULT_MODE() { return GetTokens(LUFileParser.INVALID_TOKEN_DEFAULT_MODE); }
        public ITerminalNode INVALID_TOKEN_DEFAULT_MODE(int i)
        {
            return GetToken(LUFileParser.INVALID_TOKEN_DEFAULT_MODE, i);
        }
        public ErrorStringContext(ParserRuleContext parent, int invokingState)
            : base(parent, invokingState)
        {
        }
        public override int RuleIndex { get { return RULE_errorString; } }
        public override void EnterRule(IParseTreeListener listener)
        {
            ILUFileParserListener typedListener = listener as ILUFileParserListener;
            if (typedListener != null) typedListener.EnterErrorString(this);
        }
        public override void ExitRule(IParseTreeListener listener)
        {
            ILUFileParserListener typedListener = listener as ILUFileParserListener;
            if (typedListener != null) typedListener.ExitErrorString(this);
        }
        public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor)
        {
            ILUFileParserVisitor<TResult> typedVisitor = visitor as ILUFileParserVisitor<TResult>;
            if (typedVisitor != null) return typedVisitor.VisitErrorString(this);
            else return visitor.VisitChildren(this);
        }
    }

    [RuleVersion(0)]
    public ErrorStringContext errorString()
    {
        ErrorStringContext _localctx = new ErrorStringContext(Context, State);
        EnterRule(_localctx, 6, RULE_errorString);
        int _la;
        try
        {
            int _alt;
            EnterOuterAlt(_localctx, 1);
            {
                State = 140;
                ErrorHandler.Sync(this);
                _alt = 1;
                do
                {
                    switch (_alt)
                    {
                        case 1:
                            {
                                {
                                    State = 139;
                                    _la = TokenStream.LA(1);
                                    if (!(_la == WS || _la == INVALID_TOKEN_DEFAULT_MODE))
                                    {
                                        ErrorHandler.RecoverInline(this);
                                    }
                                    else
                                    {
                                        ErrorHandler.ReportMatch(this);
                                        Consume();
                                    }
                                }
                            }
                            break;
                        default:
                            throw new NoViableAltException(this);
                    }
                    State = 142;
                    ErrorHandler.Sync(this);
                    _alt = Interpreter.AdaptivePredict(TokenStream, 3, Context);
                } while (_alt != 2 && _alt != global::Antlr4.Runtime.Atn.ATN.INVALID_ALT_NUMBER);
            }
        }
        catch (RecognitionException re)
        {
            _localctx.exception = re;
            ErrorHandler.ReportError(this, re);
            ErrorHandler.Recover(this, re);
        }
        finally
        {
            ExitRule();
        }
        return _localctx;
    }

    public partial class NestedIntentSectionContext : ParserRuleContext
    {
        public NestedIntentNameLineContext nestedIntentNameLine()
        {
            return GetRuleContext<NestedIntentNameLineContext>(0);
        }
        public NestedIntentBodyDefinitionContext nestedIntentBodyDefinition()
        {
            return GetRuleContext<NestedIntentBodyDefinitionContext>(0);
        }
        public NestedIntentSectionContext(ParserRuleContext parent, int invokingState)
            : base(parent, invokingState)
        {
        }
        public override int RuleIndex { get { return RULE_nestedIntentSection; } }
        public override void EnterRule(IParseTreeListener listener)
        {
            ILUFileParserListener typedListener = listener as ILUFileParserListener;
            if (typedListener != null) typedListener.EnterNestedIntentSection(this);
        }
        public override void ExitRule(IParseTreeListener listener)
        {
            ILUFileParserListener typedListener = listener as ILUFileParserListener;
            if (typedListener != null) typedListener.ExitNestedIntentSection(this);
        }
        public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor)
        {
            ILUFileParserVisitor<TResult> typedVisitor = visitor as ILUFileParserVisitor<TResult>;
            if (typedVisitor != null) return typedVisitor.VisitNestedIntentSection(this);
            else return visitor.VisitChildren(this);
        }
    }

    [RuleVersion(0)]
    public NestedIntentSectionContext nestedIntentSection()
    {
        NestedIntentSectionContext _localctx = new NestedIntentSectionContext(Context, State);
        EnterRule(_localctx, 8, RULE_nestedIntentSection);
        try
        {
            EnterOuterAlt(_localctx, 1);
            {
                State = 144; nestedIntentNameLine();
                State = 145; nestedIntentBodyDefinition();
            }
        }
        catch (RecognitionException re)
        {
            _localctx.exception = re;
            ErrorHandler.ReportError(this, re);
            ErrorHandler.Recover(this, re);
        }
        finally
        {
            ExitRule();
        }
        return _localctx;
    }

    public partial class NestedIntentNameLineContext : ParserRuleContext
    {
        public ITerminalNode HASH() { return GetToken(LUFileParser.HASH, 0); }
        public NestedIntentNameContext nestedIntentName()
        {
            return GetRuleContext<NestedIntentNameContext>(0);
        }
        public ITerminalNode[] WS() { return GetTokens(LUFileParser.WS); }
        public ITerminalNode WS(int i)
        {
            return GetToken(LUFileParser.WS, i);
        }
        public NestedIntentNameLineContext(ParserRuleContext parent, int invokingState)
            : base(parent, invokingState)
        {
        }
        public override int RuleIndex { get { return RULE_nestedIntentNameLine; } }
        public override void EnterRule(IParseTreeListener listener)
        {
            ILUFileParserListener typedListener = listener as ILUFileParserListener;
            if (typedListener != null) typedListener.EnterNestedIntentNameLine(this);
        }
        public override void ExitRule(IParseTreeListener listener)
        {
            ILUFileParserListener typedListener = listener as ILUFileParserListener;
            if (typedListener != null) typedListener.ExitNestedIntentNameLine(this);
        }
        public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor)
        {
            ILUFileParserVisitor<TResult> typedVisitor = visitor as ILUFileParserVisitor<TResult>;
            if (typedVisitor != null) return typedVisitor.VisitNestedIntentNameLine(this);
            else return visitor.VisitChildren(this);
        }
    }

    [RuleVersion(0)]
    public NestedIntentNameLineContext nestedIntentNameLine()
    {
        NestedIntentNameLineContext _localctx = new NestedIntentNameLineContext(Context, State);
        EnterRule(_localctx, 10, RULE_nestedIntentNameLine);
        int _la;
        try
        {
            EnterOuterAlt(_localctx, 1);
            {
                State = 150;
                ErrorHandler.Sync(this);
                _la = TokenStream.LA(1);
                while (_la == WS)
                {
                    {
                        {
                            State = 147; Match(WS);
                        }
                    }
                    State = 152;
                    ErrorHandler.Sync(this);
                    _la = TokenStream.LA(1);
                }
                State = 153; Match(HASH);
                State = 157;
                ErrorHandler.Sync(this);
                _la = TokenStream.LA(1);
                while (_la == WS)
                {
                    {
                        {
                            State = 154; Match(WS);
                        }
                    }
                    State = 159;
                    ErrorHandler.Sync(this);
                    _la = TokenStream.LA(1);
                }
                State = 160; nestedIntentName();
            }
        }
        catch (RecognitionException re)
        {
            _localctx.exception = re;
            ErrorHandler.ReportError(this, re);
            ErrorHandler.Recover(this, re);
        }
        finally
        {
            ExitRule();
        }
        return _localctx;
    }

    public partial class NestedIntentNameContext : ParserRuleContext
    {
        public NameIdentifierContext[] nameIdentifier()
        {
            return GetRuleContexts<NameIdentifierContext>();
        }
        public NameIdentifierContext nameIdentifier(int i)
        {
            return GetRuleContext<NameIdentifierContext>(i);
        }
        public ITerminalNode[] WS() { return GetTokens(LUFileParser.WS); }
        public ITerminalNode WS(int i)
        {
            return GetToken(LUFileParser.WS, i);
        }
        public NestedIntentNameContext(ParserRuleContext parent, int invokingState)
            : base(parent, invokingState)
        {
        }
        public override int RuleIndex { get { return RULE_nestedIntentName; } }
        public override void EnterRule(IParseTreeListener listener)
        {
            ILUFileParserListener typedListener = listener as ILUFileParserListener;
            if (typedListener != null) typedListener.EnterNestedIntentName(this);
        }
        public override void ExitRule(IParseTreeListener listener)
        {
            ILUFileParserListener typedListener = listener as ILUFileParserListener;
            if (typedListener != null) typedListener.ExitNestedIntentName(this);
        }
        public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor)
        {
            ILUFileParserVisitor<TResult> typedVisitor = visitor as ILUFileParserVisitor<TResult>;
            if (typedVisitor != null) return typedVisitor.VisitNestedIntentName(this);
            else return visitor.VisitChildren(this);
        }
    }

    [RuleVersion(0)]
    public NestedIntentNameContext nestedIntentName()
    {
        NestedIntentNameContext _localctx = new NestedIntentNameContext(Context, State);
        EnterRule(_localctx, 12, RULE_nestedIntentName);
        try
        {
            int _alt;
            EnterOuterAlt(_localctx, 1);
            {
                State = 162; nameIdentifier();
                State = 167;
                ErrorHandler.Sync(this);
                _alt = Interpreter.AdaptivePredict(TokenStream, 7, Context);
                while (_alt != 2 && _alt != global::Antlr4.Runtime.Atn.ATN.INVALID_ALT_NUMBER)
                {
                    if (_alt == 1)
                    {
                        {
                            State = 165;
                            ErrorHandler.Sync(this);
                            switch (TokenStream.LA(1))
                            {
                                case WS:
                                    {
                                        State = 163; Match(WS);
                                    }
                                    break;
                                case IDENTIFIER:
                                    {
                                        State = 164; nameIdentifier();
                                    }
                                    break;
                                default:
                                    throw new NoViableAltException(this);
                            }
                        }
                    }
                    State = 169;
                    ErrorHandler.Sync(this);
                    _alt = Interpreter.AdaptivePredict(TokenStream, 7, Context);
                }
            }
        }
        catch (RecognitionException re)
        {
            _localctx.exception = re;
            ErrorHandler.ReportError(this, re);
            ErrorHandler.Recover(this, re);
        }
        finally
        {
            ExitRule();
        }
        return _localctx;
    }

    public partial class NameIdentifierContext : ParserRuleContext
    {
        public ITerminalNode[] IDENTIFIER() { return GetTokens(LUFileParser.IDENTIFIER); }
        public ITerminalNode IDENTIFIER(int i)
        {
            return GetToken(LUFileParser.IDENTIFIER, i);
        }
        public ITerminalNode[] DOT() { return GetTokens(LUFileParser.DOT); }
        public ITerminalNode DOT(int i)
        {
            return GetToken(LUFileParser.DOT, i);
        }
        public NameIdentifierContext(ParserRuleContext parent, int invokingState)
            : base(parent, invokingState)
        {
        }
        public override int RuleIndex { get { return RULE_nameIdentifier; } }
        public override void EnterRule(IParseTreeListener listener)
        {
            ILUFileParserListener typedListener = listener as ILUFileParserListener;
            if (typedListener != null) typedListener.EnterNameIdentifier(this);
        }
        public override void ExitRule(IParseTreeListener listener)
        {
            ILUFileParserListener typedListener = listener as ILUFileParserListener;
            if (typedListener != null) typedListener.ExitNameIdentifier(this);
        }
        public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor)
        {
            ILUFileParserVisitor<TResult> typedVisitor = visitor as ILUFileParserVisitor<TResult>;
            if (typedVisitor != null) return typedVisitor.VisitNameIdentifier(this);
            else return visitor.VisitChildren(this);
        }
    }

    [RuleVersion(0)]
    public NameIdentifierContext nameIdentifier()
    {
        NameIdentifierContext _localctx = new NameIdentifierContext(Context, State);
        EnterRule(_localctx, 14, RULE_nameIdentifier);
        int _la;
        try
        {
            EnterOuterAlt(_localctx, 1);
            {
                State = 170; Match(IDENTIFIER);
                State = 175;
                ErrorHandler.Sync(this);
                _la = TokenStream.LA(1);
                while (_la == DOT)
                {
                    {
                        {
                            State = 171; Match(DOT);
                            State = 172; Match(IDENTIFIER);
                        }
                    }
                    State = 177;
                    ErrorHandler.Sync(this);
                    _la = TokenStream.LA(1);
                }
            }
        }
        catch (RecognitionException re)
        {
            _localctx.exception = re;
            ErrorHandler.ReportError(this, re);
            ErrorHandler.Recover(this, re);
        }
        finally
        {
            ExitRule();
        }
        return _localctx;
    }
